Develop tweaks (#15)
* refactor: formatting and logic

https://github.com/RescueRangerA/java-filmorate/pull/14#discussion_r1057358046

* refactor: change access modifier

https://github.com/RescueRangerA/java-filmorate/pull/14#discussion_r1057357728

* refactor: use Collections.emptyList() instead of List.of()

https://github.com/RescueRangerA/java-filmorate/pull/14#discussion_r1057357289
https://github.com/RescueRangerA/java-filmorate/pull/14#discussion_r1057357212

* refactor: formatting

https://github.com/RescueRangerA/java-filmorate/pull/14#discussion_r1057356618

* refactor: use valueOf() for enumerations

https://github.com/RescueRangerA/java-filmorate/pull/14#discussion_r1057355636

* refactor: use orElseThrow() instead of conditions

https://github.com/RescueRangerA/java-filmorate/pull/14#discussion_r1057353910

* refactor: remove redundant calls in controllers

https://github.com/RescueRangerA/java-filmorate/pull/14#discussion_r1057353244
https://github.com/RescueRangerA/java-filmorate/pull/14#discussion_r1057353281

* refactor: use Optional.ofNullable()

https://github.com/RescueRangerA/java-filmorate/pull/14#discussion_r1057352567

* refactor: missing autowired annotations

https://github.com/RescueRangerA/java-filmorate/pull/14#discussion_r1057352315

* refactor: use interface as type

https://github.com/RescueRangerA/java-filmorate/pull/14#discussion_r1057357626